<resources>
    <string name="app_name">OPAodMod</string>
    <string name="menu_nav_bar_settings_aod">General</string>
    <string name="menu_nav_bar_settings_clock">Clock</string>
    <string name="menu_nav_bar_settings_music">Music</string>
    <string name="menu_nav_bar_settings_weather">Weather</string>
    <string name="settings_general_raise_detection">Raise detection</string>
    <string name="settings_general_raise_detection_desc">Show the AoD only when the device is raised. Only tested on the 7 Pro, and is not guaranteed to work the same as the system option</string>
    <string name="settings_general_aod_memo">Ambient Display Message</string>
    <string name="settings_general_aod_memo_desc">Set the text that will be displayed below the clock on supported layouts</string>
    <string name="settings_general_night_mode">Disable Ambient Display when Night Mode is enabled</string>
    <string name="settings_general_night_mode_desc">Enable this to not show the AoD when the system Night Mode is enabled. Take notice of this setting, it\'s often the cause of incorrect issue reports!</string>
    <string name="settings_general_force_english">Always use English on \'Word\' layout</string>
    <string name="settings_general_force_english_desc">Enable this setting to always use English text on the \'Word\' theme, regardless of the device language</string>
    <string name="settings_general_flip_mode">Flip / Pocket Mode</string>
    <string name="settings_general_flip_mode_desc">Turn off the screen when device is flipped over or in your pocket. To save power, it\'s recommended to enable this.</string>
    <string name="settings_general_auto_brightness">Auto Brightness</string>
    <string name="settings_general_auto_brightness_desc">Automatically adjust the brightness of the AoD to save power</string>
    <string name="settings_general_sensitive_notifications">Hide Sensitive Notifications</string>
    <string name="settings_general_sensitive_notifications_desc">Hide sensitive notification content, such as messages, on the AoD</string>
    <string name="settings_general_system_font">Google Sans Font</string>
    <string name="settings_general_system_font_desc">Use the Google Sans font on the lockscreen. Disable to use the system font.</string>
    <string name="settings_general_ten_minutes">Turn off after 10 minutes</string>
    <string name="settings_general_ten_minutes_desc">Hide the AoD after 10 minutes of inactivity</string>
    <string name="settings_general_turn_off_after_fifteen_seconds">Turn off after 15 seconds</string>
    <string name="settings_general_turn_off_after_fifteen_seconds_desc">Turn off the AoD after 15 seconds. This is best used with raise detection, for people who just want to check their notifications. Has a higher priority than the 10 minutes option.</string>
    <string name="settings_clock_word_clock_flat">Word Clock</string>
    <string name="settings_clock_word_clock_flat_desc">Use the Word Clock on the Flat Theme</string>
    <string name="settings_clock_date_format">Date Format</string>
    <string name="settings_clock_24h">24 Hour Clock</string>
    <string name="settings_clock_24h_desc">Use a 24 hour clock on the AoD</string>
    <string name="settings_clock_show_am_pm">Show AM/PM</string>
    <string name="settings_clock_show_am_pm_desc">Show AM/PM text when using 12 hour (looks pretty broken)</string>
    <string name="settings_clock_general">General</string>
    <string name="settings_clock_alarm">Alarm</string>
    <string name="settings_clock_show_alarm">Show Next Alarm</string>
    <string name="settings_clock_show_alarm_desc">Show the next alarm after the weather. Only shows alarms within the next 24h</string>
    <string name="settings_music_use_system_music">System Music</string>
    <string name="settings_music_use_system_music_desc">Use the system music controller listener, which may be more reliable</string>
    <string name="settings_music_use_pixel_icon">Pixel Music Icon</string>
    <string name="settings_music_use_pixel_icon_desc">Use the music icon from the Pixel always on display (animated, may be buggy)</string>
    <string name="settings_music_offset">Offset Music</string>
    <string name="settings_music_offset_desc">Move the music display up to avoid the in-display fingerprint sensor, for devices that have one.</string>
    <string name="settings_lyrics_translation">Lyrics Translation</string>
    <string name="settings_lyrics_translation_desc">Translate on-screen lyrics into Chinese</string>
    <string name="settings_music_taichi_apps">TaiChi Music Apps</string>
    <string name="settings_music_taichi_apps_desc">For better compatibility, it\'s recommended that you add your music apps to TaiChi. Tap here to view the currently added apps and add more.</string>
    <string name="settings_weather_current_condition">Current Weather Information:</string>
    <string name="settings_weather_show_condition">Show weather condition icon</string>
    <string name="settings_weather_show_condition_desc">Show an icon before the weather condition text</string>
    <string name="settings_weather_show_condition_text">Show weather condition text</string>
    <string name="settings_weather_show_condition_text_desc">Show the weather condition as text (eg. Cloudy)</string>
    <string name="settings_weather_show_temperature">Show Temperature</string>
    <string name="settings_weather_show_temperature_desc">Show the current temperature (unit can be changed in the OnePlus Weather app)</string>
    <string name="settings_weather_show_city">Show City</string>
    <string name="settings_weather_show_city_desc">Show the current weather city from the auto location</string>
    <string name="settings_clock_advanced">Advanced</string>
    <string name="settings_clock_advanced_clock_sync">Clock Synchronization</string>
    <string name="settings_clock_advanced_clock_sync_desc">If the clock does not update correctly on your AoD, you can change the mode of sync here.</string>
    <string name="settings_clock_alignment_info">What does Clock Synchronization do?</string>
    <string name="settings_clock_alignment_info_desc">These settings allow you to pick from four options to change the balance between clock accuracy on the always on display and power consumption. If you notice the clock on the AoD isn\'t updating as it should do, try changing to a different synchronization setting\n\nPlease note this is an <b>advanced option</b>, don\'t touch it if you don\'t understand what it does</string>
    <string name="settings_clock_alignment_system_broadcast">System Broadcast Mode</string>
    <string name="settings_clock_alignment_system_broadcast_desc">This option relies on just the system broadcast of time updates. It is fairly accurate, but does have problems, especially on HydrogenOS. This uses the least amount of power.</string>
    <string name="settings_clock_alignment_alarmmanager">Alarm Manager Mode</string>
    <string name="settings_clock_alignment_alarmmanager_desc">This option uses the android Alarm Manager system in addition to the system broadcast. This allows for more accurate updates every minute, at the expense of a higher power consumption. If you use this option, it\'s recommended to use one of the options to turn the screen off after some time.</string>
    <string name="settings_clock_alignment_alarmmanager_timeout">Alarm Manager with Timeout Mode <b>(Default)</b></string>
    <string name="settings_clock_alignment_alarmmanager_timeout_desc">This option uses the Alarm Manager, but uses a \'fixed time task\' to wake up and synchronize once a minute. This is the most balanced of the options.</string>
    <string name="settings_clock_alignment_choreographer">Choreographer Mode</string>
    <string name="settings_clock_alignment_choreographer_desc">This option uses an animated clock to wake up, which provides a very accurate time synchronization, at the expense of power. It may also be inaccurate when the phone enters deep sleep. If you use this option, it\'s recommended to use one of the options to turn the screen off after some time.</string>
    <string name="settings_module_module_status">Module Status</string>
    <string name="settings_module_options">Options</string>
    <string name="settings_module_settings">OPAodMod Settings</string>
    <string name="settings_module_settings_desc">Change the layout, theme and options for how the module looks and works</string>
    <string name="settings_module_status_xposed">Xposed Status</string>
    <string name="settings_module_required_setup">Required Setup</string>
    <string name="settings_module_status_pick_up_display">System Pick up Setting</string>
    <string name="settings_module_status_storage_permission">Storage Permission</string>
    <string name="settings_module_status_working">Hooking Status</string>
    <string name="settings_module_help">Help</string>
    <string name="settings_module_troubleshooting">Troubleshooting</string>
    <string name="settings_module_troubleshooting_desc">Try one or more of the following steps:\n- Make sure the module is enabled in TaiChi or EdXposed\n- Make sure you have followed the required setup above\n- Restart Ambient Display\n- Reboot your device\n- Rehook the module (disable and then re-enable it in TaiChi or EdXposed), then reboot</string>
    <string name="settings_module_groups">Groups</string>
    <string name="settings_module_groups_desc" formatted="false">Join the official Telegram 🌍 or QQ 🇨🇳 groups</string>
    <string name="settings_module_about">About</string>
    <string name="settings_module_about_info">OPAodMod version %1s</string>
    <string name="settings_module_about_info_desc">Created by RetroX and Kieron Quinn (Quinny898/Quinny899). Icon by Amadeo.</string>
    <string name="settings_module_about_donate">Donate</string>
    <string name="settings_module_about_donate_desc">Like this module? Donate the original developer (RetroX) via AliPay or to the maintainer (Kieron Quinn) via PayPal</string>
    <string name="settings_module_translators">Translators</string>
    <string name="settings_module_translators_desc" translatable="false"><![CDATA[Lucayunxiao & RetroX 🇨🇳, Gregor Wünsch 🇩🇪, Igor Nechiporenko / jimmy123322 🇷🇺, Joaquin Benincasa (español)🇦🇷, Kieron Quinn 🇬🇧]]></string>
    <string name="settings_battery_optimisation_title">Battery Optimisation</string>
    <string name="settings_battery_optimisation_desc">Tweak options that make the battery last longer when the AoD is in use</string>
    <string name="settings_weather_icon_style">Weather Icon Style</string>
    <string name="settings_weather_icon_style_desc">Pick the style of the weather condition icon</string>
    <string name="settings_clock_show_alarm_emoji_desc">Show Alarm Icon</string>
    <string name="settings_clock_show_alarm_emoji">Show alarm icon before the next alarm time</string>
    <string name="settings_op_clock_style">OnePlus Clock Style</string>
    <string name="settings_clock_style">Style</string>
    <string name="settings_generic_theme_not_supported">Unsupported Theme</string>
    <string name="settings_generic_theme_not_supported_desc">This theme does not support these options. Please choose a different theme if you wish to use them</string>
    <string name="settings_general_hide_divider">Hide Divider</string>
    <string name="settings_general_hide_divider_desc">Hide the horizontal divider between the clock, text and notifications</string>
    <string name="settings_clock_show_bullet">Show bullet point dividers</string>
    <string name="settings_clock_show_bullet_desc">Show a bullet point symbol • as a divider between the date and weather text</string>
    <string name="settings_general_sensitive_notifications_pick">Sensitive Notification Apps</string>
    <string name="settings_general_sensitive_notifications_pick_desc">Set which apps should have their content hidden as sensitive</string>
</resources>